--- a/security-learn/pom.xml
+++ b/security-learn/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>org.example</groupId>
     <artifactId>security-learn</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Auth</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
