--- a/springcloud-learn/stock/src/main/resources/application.yml
+++ b/springcloud-learn/stock/src/main/resources/application.yml
@@ -1,2 +1,18 @@
 server:
   port: 8011
+spring:
+  application:
+    name: stock-service
+  cloud:
+    nacos:
+      server-addr: 127.0.0.1:8848
+      discovery:
+        server-addr: 127.0.0.1:8848
+      config:
+        server-addr: 127.0.0.1:8848
+        file-extension: yaml  # 必须修改成yaml
+        group: DEFAULT_GROUP  # 缺省即可
+        prefix: ${spring.application.name}
+
+      username: nacos
+      password: nacos
